derive/tests/fail/03-covariant-static.stderr
error: A variance cannot be requested for a struct without
       a lifetime parameter!

 --> tests/fail/03-covariant-static.rs:7:16
  |
7 |     #[variance(unsafe_covariant)]
  |                ^^^^^^^^^^^^^^^^
